@@ -761,7 +761,7 @@
 }
 
 @article{Schneider,
- author  = {M. V. Schneider},
+ author  = {Martin V. Schneider},
  title   = "{Microstrip Lines for Microwave Integrated Circuits}",
  journal = BELLSTJ,
  volume  = {48},
@@ -769,4 +769,15 @@
  year    = {1969},
  pages   = {1421-1444},
  local   = "{E000621341.pdf}",
+}
+
+@inproceedings{Schneider1,
+ author    = {Martin V. Schneider},
+ title     = "{Microstrip Dispersion}",
+ booktitle = "Proceedings of the IEEE, Letters",
+ year      = {1972},
+ month     = jan,
+ volume    = {60},
+ pages     = {144-146},
+ local     = "{E000622830.pdf}",
 }
