@@ -1,0 +1,50 @@
+/*
+ * trsolver.h - transient solver class definitions
+ *
+ * Copyright (C) 2004 Stefan Jahn <stefan@lkcc.org>
+ *
+ * This is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2, or (at your option)
+ * any later version.
+ * 
+ * This software is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License
+ * along with this package; see the file COPYING.  If not, write to
+ * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.  
+ *
+ * $Id: trsolver.h,v 1.1 2004-09-10 16:26:56 ela Exp $
+ *
+ */
+
+#ifndef __TRSOLVER_H__
+#define __TRSOLVER_H__
+
+#include "nasolver.h"
+
+class sweep;
+
+class trsolver : public nasolver<nr_double_t>
+{
+ public:
+  trsolver ();
+  trsolver (char *);
+  trsolver (trsolver &);
+  ~trsolver ();
+  void solve (void);
+  void calc (nr_double_t);
+  void init (void);
+
+  void calcCoefficients (void);
+
+ private:
+  sweep * swp;
+};
+
+#endif /* __TRSOLVER_H__ */
+
