@@ -1,3 +1,8 @@
+2004-09-10  Stefan Jahn  <stefan@lkcc.org>
+
+	* trsolver.h, trsolver.cpp (class trsolver): New files.  Some
+	basic preparations for the transient simulation.
+
 2004-09-09  Stefan Jahn  <stefan@lkcc.org>
 
 	* dcsolver.cpp: New simulation property 'saveAll' used to
