@@ -1,3 +1,8 @@
+2004-09-10  Stefan Jahn  <stefan@lkcc.org>
+
+	* technical.tex (subsubsection{Schneider}): Documented
+	dispersion models of single microstrip by M.V. Schneider.
+
 2004-09-09  Stefan Jahn  <stefan@lkcc.org>
 
 	* technical.tex (subsubsection{Schneider}): Documented
